[gd_scene load_steps=13 format=2]

[ext_resource path="res://stars.png" type="Texture" id=1]
[ext_resource path="res://Theme.tres" type="Theme" id=2]
[ext_resource path="res://Planets/LandMasses/LandMasses.tscn" type="PackedScene" id=3]
[ext_resource path="res://GUI.gd" type="Script" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform vec2 offset = vec2(0.0);
uniform float time_elapsed;

float rand(vec2 coord) {
	return fract(sin(dot(coord.xy ,vec2(12.9898,78.233))) * 43758.5453);
}
vec2 rotate(vec2 coord, float angle){
	coord -= 0.5;
	coord *= mat2(vec2(cos(angle),-sin(angle)),vec2(sin(angle),cos(angle)));
	return coord + 0.5;
}

void fragment() {
	vec2 uv = rotate(UV, time_elapsed * 0.2);

	vec4 col = vec4(1.0) + rand(UV + vec2(time_elapsed*0.0000001,0.0)) * 0.03;

	col = col* vec4(
		abs(sin(uv.x * cos(offset.x)+ time_elapsed * 0.105)),
		abs(sin((cos(uv.x + uv.y) + cos(offset.x + offset.y) + time_elapsed * 0.059))) ,
		abs(cos(uv.y * sin(offset.y) + time_elapsed * 0.0253)) ,
		1.0);

	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/offset = Vector2( 0, 0 )
shader_param/time_elapsed = null

[sub_resource type="CanvasItemMaterial" id=3]
particles_animation = true
particles_anim_h_frames = 11
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.0518519, 0.881481, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 256, 150, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 5 )
hue_variation = 0.05
hue_variation_random = 1.0
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float abberation: hint_range(-0.1, 0.1);


void fragment () {
	vec4 color = vec4(1.0);




	color.r = texture(SCREEN_TEXTURE, SCREEN_UV - vec2(abberation,0.0)).r;
	color.g = texture(SCREEN_TEXTURE, SCREEN_UV).g;
	color.b = texture(SCREEN_TEXTURE, SCREEN_UV + vec2(abberation,0.0)).b;
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=8]
shader = SubResource( 7 )
shader_param/abberation = 0.001

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dark" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.878431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.513726 )
material = SubResource( 3 )
position = Vector2( 256, 150 )
amount = 50
lifetime = 50.0
preprocess = 50.0
process_material = SubResource( 6 )
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlanetHolder" type="CenterContainer" parent="HBoxContainer"]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
rect_pivot_offset = Vector2( 150, 150 )

[node name="Control" parent="HBoxContainer/PlanetHolder" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 50.0
margin_right = 250.0
margin_bottom = 250.0

[node name="Settings" type="Control" parent="HBoxContainer"]
margin_left = 304.0
margin_right = 512.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_right = -5.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HBoxContainer/Settings/VBoxContainer"]
margin_right = 203.0
margin_bottom = 17.0
theme = ExtResource( 2 )
text = "random"

[node name="Seed" type="HBoxContainer" parent="HBoxContainer/Settings/VBoxContainer"]
margin_top = 22.0
margin_right = 203.0
margin_bottom = 39.0

[node name="Label" type="Label" parent="HBoxContainer/Settings/VBoxContainer/Seed"]
margin_right = 56.0
margin_bottom = 17.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.811765, 0.811765, 0.811765, 1 )
text = "seed:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeedText" type="LineEdit" parent="HBoxContainer/Settings/VBoxContainer/Seed"]
margin_left = 60.0
margin_right = 203.0
margin_bottom = 17.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="HBoxContainer/Settings/VBoxContainer"]
margin_top = 44.0
margin_right = 203.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 10 )

[node name="Label2" type="Label" parent="HBoxContainer/Settings/VBoxContainer"]
margin_top = 59.0
margin_right = 203.0
margin_bottom = 76.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.811765, 0.811765, 0.811765, 1 )
text = "sprite scale:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderScale" type="HSlider" parent="HBoxContainer/Settings/VBoxContainer"]
margin_top = 81.0
margin_right = 203.0
margin_bottom = 97.0
theme = ExtResource( 2 )
min_value = 0.2
max_value = 1.0
step = 0.01
value = 1.0

[node name="Control" type="Control" parent="HBoxContainer/Settings/VBoxContainer"]
margin_top = 102.0
margin_right = 203.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 10 )

[node name="Label3" type="Label" parent="HBoxContainer/Settings/VBoxContainer"]
margin_top = 117.0
margin_right = 203.0
margin_bottom = 134.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.811765, 0.811765, 0.811765, 1 )
text = "pixels:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderPixels" type="HSlider" parent="HBoxContainer/Settings/VBoxContainer"]
margin_top = 139.0
margin_right = 203.0
margin_bottom = 155.0
theme = ExtResource( 2 )
min_value = 30.0
value = 70.0

[node name="Abberation" type="ColorRect" parent="."]
material = SubResource( 8 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 300.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/Settings/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="text_changed" from="HBoxContainer/Settings/VBoxContainer/Seed/SeedText" to="." method="_on_LineEdit_text_changed"]
[connection signal="value_changed" from="HBoxContainer/Settings/VBoxContainer/SliderScale" to="." method="_on_SliderScale_value_changed"]
[connection signal="value_changed" from="HBoxContainer/Settings/VBoxContainer/SliderPixels" to="." method="_on_SliderPixels_value_changed"]
[connection signal="gui_input" from="Control" to="." method="_on_Control_gui_input"]
